--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: 13.2.1
-  flutter_riverpod: ^2.5.1
+  go_router: ^14.0.2
   device_preview: 1.1.0
-
+  dropdown_button2: ^2.3.9
+  cell_calendar: ^0.8.0
+  intl: 0.18.1
+  geolocator: ^11.0.0
+  flutter_circular_text: ^0.3.1
+  google_fonts: 4.0.4
+  responsive_framework: ^0.2.0
+  get: 4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
   custom_lint: ^0.6.4
 
 # For information on the generic Dart part of this file, see the
