--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   connectivity: 3.0.6
   flutter_secure_storage: 9.1.1
   shared_preferences: 2.2.3
+  #ถอดรหัส
+  crypto: ^3.0.3
+  encrypt: ^5.0.0
 
 dev_dependencies:
   flutter_test:
