--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -16,7 +16,6 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>chill_talk_test</string>
-	<string>UIInterfaceOrientationPortrait</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -32,6 +31,11 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
+	<key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
