--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: 14.0.2
-  device_preview: 1.1.0
   dropdown_button2: 2.3.9
   cell_calendar: 0.8.0
   intl: 0.18.1
   geolocator: 11.0.0
+  flutter_localization: ^0.2.1
   flutter_circular_text: 0.3.1
   google_fonts: 4.0.4
   get: 4.6.6
